--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
+main{
+  max-width: 1200px;
+  margin: auto;
+}
+.page-heading{
+  color: #032d60;
+  font-size: 48px;
   text-align: center;
+  margin-top: 100px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.page-subheading{
+  text-align: center;
+  font-size: 24px;
+  letter-spacing: 0px;
+  line-height: 30px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card{
+  padding: 20px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
+  border-radius: 16px;
+  box-shadow: rgba(24, 24, 24, 0.08) 0px 0px 2px 0px, rgba(24, 24, 24, 0.16) 0px 2px 4px 1px;
+  max-width: 350px;
+  margin-bottom: 20px;
+  background-color: #fff;
+}
+.card h2{
+  color: rgb(3, 45, 96);
+  font-size: 24px;
+  font-weight: 600;
+}
+.card-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.subtext{
+  font-size: 16px;
+  color: #000;
+  margin-top: 8px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+img{
+  height: fit-content;
+  width: 60px;
+  margin-top: 10px;
+}
+.img-wrapper{
+  height: 100px;
+  width: 100px;
+  align-items: baseline;
+  display: flex;
+  margin-right: 20px;
+}
+.width80{
+  width: 90%;
+}
+.width20{
+  width:10%;
+}
+.mb-50{
+  margin-bottom: 50px;
+}
+footer{
+  text-align: center;
+  font-size: 24px;
+  margin-top: 24px;
 }
